# nubi

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  HISTORY.md  Makefile  README.md  TODO.md  pyproject.toml
.claude/agents/: investigator.md  reviewer.md  tester.md  verifier.md  worker.md
.github/workflows/: ci.yml
.nubi/deploy-manifests-20260409111108/: gates.json  monitor.json  result.json  review.json
.nubi/mcp-lifecycle-tools/: gates.json  monitor.json  result.json  review.json
.nubi/mcp-server-20260409005902/: gates.json  monitor.json  result.json  review.json
.nubi/mcp-server-fix-20260409012250/: gates.json  monitor.json  result.json  review.json
.nubi/mcp-version-flag/: gates.json  monitor.json  result.json  review.json
.nubi/pr-pipeline-summary-v2/: gates.json  monitor.json  (+2 more)
.opencode/: opencode.json
docs/: flexible-pipelines.md  pipeline.d2  pr-pipeline-summary.md
examples/: add-go-cli-task.yaml  add-go-hello-task.yaml  add-go-utils-task.yaml  sample-taskspec.yaml
manifests/: crd.yaml  deployment.yaml
scripts/: dev-cluster.sh  e2e.sh  integration-setup.sh  smoke-test.sh
tasks/: 001-project-foundation.md  002-namespace-lifecycle.md  003-sandbox-job-spawning.md  004-executor-agent.md  005-local-dev-harness.md  006-deterministic-gates.md  007-status-persistence.md  008-repeatable-live-e2e.md  009-e2e-fail-fast-guardrail.md  010-controller-status-patch-and-e2e-post-job-guardrail.md  011-restart-controller-on-e2e-up.md  012-controller-patch-signature-fix.md  013-e2e-job-terminal-detection.md
tests/: test_controller_results.py  test_credentials.py  test_defaults.py  test_e2e_script.py  test_entrypoint.py  test_executor.py  test_handlers.py  test_monitor_entrypoint.py  test_namespace.py  test_result.py  test_reviewer_entrypoint.py  test_sandbox.py  test_schema.py  test_tool_registry.py  test_tools_check.py  test_tools_files.py  test_tools_git.py  test_tools_shell.py
(+86 files in other folders)
